Updates to header and nav

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,25 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Jim Gile's Portfolio" />
   <title>Jim Gile</title>
+  <meta content="Jim Gile - Personal Website" property="og:title"/>
+  <meta name="description" content="Professional portfolio and personal website of Jim Gile" />
+  <meta content="Professional portfolio and personal website of Jim Gile" property="og:description"/>
+  <meta content="/android-chrome-512x512.png" property="og:image"/>
+  <meta content="website" property="og:type"/>
+  
+  <!-- Tailwind CSS -->
+  <script src="assets/script_e5c3b350.js"></script>
+  <link href="assets/style_98b7e409.css" rel="stylesheet"/>
+  <!-- React Dependencies -->
+  <script crossorigin="" src="assets/script_d36704bf.js"></script>
+  <script crossorigin="" src="assets/script_724a61fb.js"></script>
+  <script crossorigin="" src="assets/script_7413292a.js"></script>
+  <script crossorigin="" src="assets/script_73638c34.js"></script>
+  <!-- Font Awesome -->
+  <link href="assets/style_fc801b53.css" rel="stylesheet"/>
+  <script crossorigin="" src="assets/script_b8298067.js"></script>
+
 </head>
 
 <body>
