--- a/public/index.html
+++ b/public/index.html
@@ -30,21 +30,37 @@
   <link href="assets/style_fc801b53.css" rel="stylesheet"/>
   <script crossorigin="" src="assets/script_b8298067.js"></script>
 
+  <style>
+    /* Font Awesome Font Faces - Update paths to match your server structure */
+    @font-face {
+        font-family: 'Font Awesome 6 Free';
+        font-style: normal;
+        font-weight: 400;
+        src: url('/webfonts/fa-regular-400.woff2') format('woff2'),
+             url('/webfonts/fa-regular-400.ttf') format('truetype');
+    }
+
+    @font-face {
+        font-family: 'Font Awesome 6 Free';
+        font-style: normal;
+        font-weight: 900;
+        src: url('/webfonts/fa-solid-900.woff2') format('woff2'),
+             url('/webfonts/fa-solid-900.ttf') format('truetype');
+    }
+
+    @font-face {
+        font-family: 'Font Awesome 6 Brands';
+        font-style: normal;
+        font-weight: 400;
+        src: url('/webfonts/fa-brands-400.woff2') format('woff2'),
+             url('/webfonts/fa-brands-400.ttf') format('truetype');
+    }
+  </style>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
